('Daily Carrier Summary' + 'Daily Carrier Summary By Day') reports implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23621

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -361,6 +361,8 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Reports\Analytics\CarrierProfile.rdlc" />
+    <EmbeddedResource Include="Reports\Analytics\rdlCarrierDailyTraffic.rdlc" />
+    <EmbeddedResource Include="Reports\Analytics\rdlCarrierDailyTrafficByDay.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\rdlCarrierLostSummary.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
