Add Entities RateLoss and RateLossFormatted
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23646

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Billing\DetailedCarrierSummary.cs" />
     <Compile Include="Billing\DetailedCarrierSummaryFormatted.cs" />
     <Compile Include="Billing\MonthTraffic.cs" />
+    <Compile Include="Billing\RateLoss.cs" />
+    <Compile Include="Billing\RateLossFormatted.cs" />
     <Compile Include="Billing\TotalDurationPerDate.cs" />
     <Compile Include="Billing\VariationReports.cs" />
     <Compile Include="Billing\VariationReportsData.cs" />
