Add save statistics to database wf
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23648

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ImportCDRProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawCDRsProcessInput.cs" />
+    <Compile Include="SaveStatisticsToDBProcessInput.cs" />
     <Compile Include="StoreCDRsInDBProcessInput.cs" />
     <Compile Include="StoreInvalidCDRsInDBProcessInput.cs" />
     <Compile Include="StoreMainCDRsInDBProcessInput.cs" />
