RateLoss finish BackEnd
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23649

--- a/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Business/TOne.Analytics.Business.csproj
@@ -47,6 +47,7 @@
     <Compile Include="BillingReports\DailyCarrierSummaryReportGenerator.cs" />
     <Compile Include="BillingReports\DailySummaryReportGenerator.cs" />
     <Compile Include="BillingReports\DetailedCarrierSummaryReportGenerator.cs" />
+    <Compile Include="BillingReports\RateLossReportGenerator.cs" />
     <Compile Include="BillingReports\ZoneProfitReportGenerator.cs" />
     <Compile Include="BillingReports\ZoneSummaryDetailedReportGenerator.cs" />
     <Compile Include="BillingReports\CarrierLostReportGenerator.cs" />
