Add store statistics to db activity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23660

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -107,6 +107,7 @@
     <Compile Include="GenerateBillingAndPricingCDRs.cs" />
     <Compile Include="ProcessRawCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoreStatisticsToDB.cs" />
     <Compile Include="UpdateTrafficStatisticsInDB.cs" />
     <Compile Include="StoreCDRsToDB.cs" />
     <Compile Include="StoreInvalidCDRsToDB.cs" />
