check-in Rate Loss
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23680

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -366,6 +366,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Reports\Analytics\rdlDailySummary.rdlc" />
+    <EmbeddedResource Include="Reports\Analytics\rdlRateLoss.rdlc" />
     <EmbeddedResource Include="Reports\Analytics\rdlZoneProfits.rdlc">
       <SubType>Designer</SubType>
     </EmbeddedResource>
