Differential Routing/ Routing Pages
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23688

--- a/TOneV2/Code/TOneV2/TOne.Data.SQL/TOne.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Data.SQL/TOne.Data.SQL.csproj
@@ -75,6 +75,7 @@
     <Compile Include="ReportDefinitionDataManager.cs" />
     <Compile Include="RoleDataManager.cs" />
     <Compile Include="SecurityDataManager.cs" />
+    <Compile Include="SystemParameterDataManger.cs" />
     <Compile Include="UserDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
