--- a/TOneV2/Code/TOneV2/TOne.Data/TOne.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Data/TOne.Data.csproj
@@ -113,6 +113,7 @@
     <Compile Include="IReportDefinitionDataManager.cs" />
     <Compile Include="IRoleDataManager.cs" />
     <Compile Include="ISecurityDataManager.cs" />
+    <Compile Include="ISystemParameterDataManger.cs" />
     <Compile Include="IUserDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
