--- a/TOneV2/Code/TOneV2/TOne.LCRProcess.Activities/TOne.LCRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess.Activities/TOne.LCRProcess.Activities.csproj
@@ -75,23 +75,24 @@
     <Compile Include="BuildCodeMatchByCodeGroup.cs" />
     <Compile Include="BuildCodeMatchByFirstCodeDigit.cs" />
     <Compile Include="BuildRoutes.cs" />
+    <Compile Include="DifferentialRoutingProcess\BuildSingleDestinationCodeMatches.cs" />
     <Compile Include="BuildZoneMatch.cs" />
     <Compile Include="CreateIndexesOnRouteTable.cs" />
     <Compile Include="CreateRoutingDatabase.cs" />
     <Compile Include="CreateIndexesOnZoneMatchTable.cs" />
     <Compile Include="CreateIndexesOnCodeMatchTable.cs" />
     <Compile Include="DropOldRoutingDatabases.cs" />
-    <Compile Include="GetCodeCustomers.cs" />
     <Compile Include="GetCodeGroupsByCodePrefix.cs" />
     <Compile Include="GetCodes.cs" />
     <Compile Include="GetCurrentDatabaseId.cs" />
-    <Compile Include="GetDifferentialRouteRules.cs" />
-    <Compile Include="GetRouteCodesFromRules.cs" />
+    <Compile Include="DifferentialRoutingProcess\GetDifferentialRouteRules.cs" />
+    <Compile Include="DifferentialRoutingProcess\GetRouteCodesFromRules.cs" />
     <Compile Include="GetRouteRules.cs" />
     <Compile Include="GetSupplierZoneRates.cs" />
     <Compile Include="GetCustomerZoneRates.cs" />
-    <Compile Include="GetZoneRates.cs" />
-    <Compile Include="LoadCodeMatches.cs" />
+    <Compile Include="DifferentialRoutingProcess\GetZoneRates.cs" />
+    <Compile Include="DifferentialRoutingProcess\LoadCodeMatches.cs" />
+    <Compile Include="GetTargetCustomerZoneRates.cs" />
     <Compile Include="LoadZoneRatesFromRate.cs" />
     <Compile Include="PrepareRouteDetailsForDBApply.cs" />
     <Compile Include="PrepareRoutesForDBApply.cs" />
@@ -101,7 +102,7 @@
     <Compile Include="SetRoutingDatabaseReady.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateCodeMatches.cs" />
-    <Compile Include="UpdateRouteDetails.cs" />
+    <Compile Include="DifferentialRoutingProcess\UpdateRouteBatches.cs" />
     <Compile Include="UpdateZoneMatchInDB.cs" />
     <Compile Include="ApplyCodeMatchesToDB.cs" />
     <Compile Include="UpdateZoneRates.cs" />
