git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23693

--- a/CDRAnalysis/CDRAnalysis.Web/Web.config
+++ b/CDRAnalysis/CDRAnalysis.Web/Web.config
@@ -7,8 +7,8 @@
   <connectionStrings>
    
      
- <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=walid;Password=P@ssw0rd;"            providerName="System.Data.SqlClient" />
-    <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile_WF"  providerName="MySql.Data.MySqlClient" /> 
+ <add name="CDRDBConnectionString"      connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile;User ID=zahraa;Password=p@ssw0rd;"            providerName="System.Data.SqlClient" />
+    <add name="CDRDBConnectionStringMySQL" connectionString="server=192.168.110.241;user id=zain;password=zain123;persistsecurityinfo=True;database=CDRAnalysisMobile"  providerName="MySql.Data.MySqlClient" /> 
 
   </connectionStrings>
   <appSettings>
