--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -49,6 +49,8 @@
     <Compile Include="Billing\CarrierProfile.cs" />
     <Compile Include="Billing\CarrierSummaryDaily.cs" />
     <Compile Include="Billing\CarrierSummaryDailyFormatted.cs" />
+    <Compile Include="Billing\CustomerSummary.cs" />
+    <Compile Include="Billing\CustomerSummaryFormatted.cs" />
     <Compile Include="Billing\DailySummary.cs" />
     <Compile Include="Billing\DailySummaryFormatted.cs" />
     <Compile Include="Billing\DetailedCarrierSummary.cs" />
