--- a/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -24,9 +24,9 @@
     <pages theme="skins" />
   </system.web>
   <connectionStrings>
-    <add name="CDRAnalysisMobileConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile;User ID=zahraa;Password=p@ssw0rd;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CDRAnalysisMobile_WFConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=CDRAnalysisMobile_WF;User ID=zahraa;Password=p@ssw0rd;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
     
-    <add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.110.185;initial catalog=CDRAnalysisMobile;persist security info=True;user id=zahraa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.110.185;initial catalog=CDRAnalysisMobile_WF;persist security info=True;user id=zahraa;password=p@ssw0rd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
@@ -36,7 +36,7 @@
     <add key="AutomaticUploadPath" value="C:\\FMS_Import\\Automatic\\"/>
     <add key="SQLType" value="MySQL"/>
     <add key="SERVER" value="192.168.110.241" />
-    <add key="DATABASE" value="CDRAnalysisMobile" />
+    <add key="DATABASE" value="CDRAnalysisMobile_WF" />
     <add key="UID" value="zain" />
     <add key="PASSWORD" value="zain123" />
     <add key="FTP_Username" value="root" />
