Add Daily Stat WF
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23714

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess/TOne.CDRProcess.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess/TOne.CDRProcess.csproj
@@ -85,7 +85,9 @@
     <Compile Include="CDRImport\BillingCDRsProcess.cs" />
     <Compile Include="CDRGenerationProcess.cs" />
     <Compile Include="CDRImport\GenerateStatisticsProcess.cs" />
+    <Compile Include="CDRImport\SaveDailyStatisticsToDBProcess.cs" />
     <Compile Include="CDRImport\SaveStatisticsToDBProcess.cs" />
+    <Compile Include="CDRImport\GenerateDailyStatisticsProcess.cs" />
     <Compile Include="Repricing\DailyRepricingProcess.cs" />
     <Compile Include="CDRImport\ImportCDRProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -138,12 +140,6 @@
     </XamlAppDef>
   </ItemGroup>
   <ItemGroup>
-    <XamlAppDef Include="CDRGenerationProcess.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </XamlAppDef>
-  </ItemGroup>
-  <ItemGroup>
     <XamlAppDef Include="CDRImport\ImportCDRProcess.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -187,6 +183,24 @@
   </ItemGroup>
   <ItemGroup>
     <XamlAppDef Include="CDRImport\SaveStatisticsToDBProcess.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </XamlAppDef>
+  </ItemGroup>
+  <ItemGroup>
+    <XamlAppDef Include="CDRImport\GenerateDailyStatisticsProcess.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </XamlAppDef>
+  </ItemGroup>
+  <ItemGroup>
+    <XamlAppDef Include="CDRGenerationProcess.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </XamlAppDef>
+  </ItemGroup>
+  <ItemGroup>
+    <XamlAppDef Include="CDRImport\SaveDailyStatisticsToDBProcess.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </XamlAppDef>
