--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
@@ -46,10 +46,12 @@
     <Compile Include="BillingCDRsProcessInput.cs" />
     <Compile Include="CDRGenerationProcessInput.cs" />
     <Compile Include="DailyRepricingProcessInput.cs" />
+    <Compile Include="GenerateDailyStatisticsProcessInput.cs" />
     <Compile Include="GenerateStatisticsProcessInput.cs" />
     <Compile Include="ImportCDRProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawCDRsProcessInput.cs" />
+    <Compile Include="SaveDailyStatisticsToDBProcessInput.cs" />
     <Compile Include="SaveStatisticsToDBProcessInput.cs" />
     <Compile Include="StoreCDRsInDBProcessInput.cs" />
     <Compile Include="StoreInvalidCDRsInDBProcessInput.cs" />
