--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Entities\CDRBillingBatch.cs" />
     <Compile Include="Entities\CDRManager.cs" />
     <Compile Include="Entities\CDRSharedQueueManager.cs" />
+    <Compile Include="GenerateDailyTrafficStatistics.cs" />
     <Compile Include="GenerateTrafficStatisticsForRepricing.cs" />
     <Compile Include="GenerateTrafficStatistics.cs" />
     <Compile Include="ImportCDRs.cs" />
