git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23727

--- a/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Classes\Enums.cs" />
     <Compile Include="Classes\Permission.cs" />
     <Compile Include="Classes\SourceMapping.cs" />
+    <Compile Include="Classes\Strategy.cs" />
     <Compile Include="Classes\User.cs" />
     <Compile Include="Classes\UserPermission.cs" />
     <Compile Include="Classes\Constants.cs" />
