git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C23757

--- a/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
+++ b/CDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
@@ -67,49 +67,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CellProfile.cs">
+    <Compile Include="CallClass.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Classes\CallsStatistics.cs" />
-    <Compile Include="Classes\EmailReceiverType.cs" />
-    <Compile Include="Classes\prGetEmails_Result.cs" />
-    <Compile Include="Classes\EmailReceiver.cs" />
-    <Compile Include="Classes\EmailManager.cs" />
-    <Compile Include="Classes\EmailTemplate.cs" />
-    <Compile Include="Classes\EmailToken.cs" />
-    <Compile Include="Classes\ReportingStatus.cs" />
-    <Compile Include="Classes\Enums.cs" />
-    <Compile Include="Classes\Permission.cs" />
-    <Compile Include="Classes\Strategy.cs" />
-    <Compile Include="Classes\User.cs" />
-    <Compile Include="Classes\UserPermission.cs" />
+    <Compile Include="CallType.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Constants.cs" />
-    <Compile Include="Classes\vwReportedNumberNormalCDR.cs" />
-    <Compile Include="Classes\vwReportedNumber.cs" />
-    <Compile Include="Classes\Criteria_profile.cs" />
-    <Compile Include="Classes\NormalCDR.cs" />
-    <Compile Include="Classes\NumberProfile.cs" />
-    <Compile Include="Classes\Period.cs" />
-    <Compile Include="Classes\Report.cs" />
-    <Compile Include="Classes\ReportDetail.cs" />
-    <Compile Include="Classes\SubscriberThreshold.cs" />
     <Compile Include="Classes\SuspectionOccurance.cs" />
-    <Compile Include="Classes\Suspection_Level.cs" />
-    <Compile Include="Criteria_Profile.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EmailReceiver.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EmailReceiverType.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EmailTemplate.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EmailToken.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -134,31 +99,10 @@
     <Compile Include="Period.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Permission.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="prGetReportVariables_Result.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Report.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ReportDetail.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="ReportingStatu.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Set_CallClass.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Set_CallType.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Set_SubType.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="sp_CallClass_GetAll_Result.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -183,34 +127,16 @@
     <Compile Include="Strategy.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Strategy1.cs">
+    <Compile Include="SubscriberThreshold.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="SubscriberThreshold.cs">
+    <Compile Include="SubType.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Suspicion_Level.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="sysdiagram.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="User.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="UserPermission.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="vwReportedNumber.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="vwReportedNumberNormalCDR.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="vwReportVariable.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="vwSuspectionAnalysi.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
   </ItemGroup>
