--- a/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
+++ b/Vanrise/Code/Vanrise.Security.Business/Vanrise.Security.Business.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessEntityManager.cs" />
     <Compile Include="MenuManager.cs" />
     <Compile Include="PermissionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
