--- a/Vanrise/Code/Vanrise.Security.Web/Vanrise.Security.Web.csproj
+++ b/Vanrise/Code/Vanrise.Security.Web/Vanrise.Security.Web.csproj
@@ -113,13 +113,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Security\Constants\HolderTypeEnum.js" />
     <Content Include="Security\Constants\PermissionFlagEnum.js" />
+    <Content Include="Security\Services\APIServices\BusinessEntityAPIService.js" />
     <Content Include="Security\Services\APIServices\SecurityApiService.js" />
     <Content Include="Security\Services\APIServices\MenuAPIService.js" />
     <Content Include="Security\Services\APIServices\PermissionApiService.js" />
     <Content Include="Security\Services\APIServices\RoleAPIService.js" />
     <Content Include="Security\Services\APIServices\UsersAPIService.js" />
     <Content Include="Security\Services\SecurityService.js" />
+    <Content Include="Security\Views\BusinessEntityEditor.html" />
+    <Content Include="Security\Views\BusinessEntityEditorController.js" />
+    <Content Include="Security\Views\BusinessEntityManagement.html" />
+    <Content Include="Security\Views\BusinessEntityManagementController.js" />
     <Content Include="Security\Views\Login.html" />
     <Content Include="Security\Views\LoginController.js" />
     <Content Include="Security\Views\PermissionEditor.html" />
@@ -136,6 +142,7 @@
     <Content Include="Security\Views\UserManagementController.js" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BusinessEntitiesController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
     <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\PermissionController.cs" />
